# human_arm

./: CMakeLists.txt  LICENSE  README.md  package.xml
human_arm/: CMakeLists.txt  package.xml
human_arm_description/: package.xml
human_arm_description/launch/: arm.launch  arm.rviz  arm_display.launch  source_target.rviz  target_source_display.launch  upload.launch  upload_with_srdf.launch
human_arm_description/model/: bracelet_unfolded.urdf.xacro  human_arm.urdf.xacro  properties.yaml
human_arm_description/robots/: bracelet_unfolded.urdf.xacro  human_arm.urdf.xacro
human_arm_motion_msgs/: CMakeLists.txt  package.xml
human_arm_motion_msgs/action/: PlayGesture.action
human_arm_motion_msgs/srv/: PlayConfig.srv
human_arm_motion_server/: CMakeLists.txt  package.xml
human_arm_motion_server/config/DLR/: hand_arm_gestures.yaml
human_arm_motion_server/config/DLR/recfiles/: DLR_sequence0.yaml  DLR_sequence3.yaml
human_arm_motion_server/config/default/: hand_arm_gestures.yaml
human_arm_motion_server/config/default/recfiles/: example_rec_config.yaml  palmar_flexion_sup_pron.yaml  palmar_flexion_sup_pron_test.yaml  pronated_fist_palmar_extension.yaml  pronated_palmar_extension.yaml  pronated_palmar_flexion.yaml  supinated_fist.yaml  supinated_fist_palmar_extension.yaml  supinated_palmar_extension.yaml  supinated_palmar_flexion.yaml  supinated_synergy_fist_and_parlmar_flexion.yaml  supinated_synergy_fist_and_parlmar_flexion_test.yaml  synergy_fist_and_parlmar_flexion_sup_pron.yaml  synergy_fist_and_parlmar_flexion_sup_pron_test.yaml
human_arm_motion_server/config/recfiles/: pronated_fist.yaml  pronated_fist_palmar_extension.yaml  pronated_fist_palmar_flexion.yaml  pronated_palmar_extension.yaml  pronated_palmar_flexion.yaml  supinated_fist_palmar_extension.yaml  supinated_fist_palmar_flexion.yaml
human_arm_motion_server/launch/: launch_motion_recording.launch  live_setup.launch  start_motion_server.launch
human_arm_motion_server/src/: convert_holding_continuous_to_csv.py  convert_holding_to_csv.py  convert_to_csv.py  convert_to_csv_classification.py  motion_director.py  motion_server.py
human_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
human_arm_moveit_config/config/: fake_controllers.yaml  gazebo_human_arm.urdf  human_arm.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
human_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
human_arm_pose_server/: CMakeLists.txt  hand_arm_gestures.yaml  package.xml
human_arm_pose_server/config/: example_rec_config.yaml  hand_arm_gestures.yaml  rec_config.yaml
human_arm_pose_server/launch/: launch_motion_recording.launch  start_motion_server.launch
human_arm_pose_server/src/: motion_director.py  motion_server.py
human_arm_pose_server_msgs/: CMakeLists.txt  package.xml
human_arm_pose_server_msgs/action/: PlayGesture.action
human_arm_pose_server_msgs/srv/: SaveGesture.srv
human_arm_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
human_arm_rviz_plugin/src/: human_arm_panel.cpp  human_arm_panel.h
model/: human_arm.urdf.xacro  properties.yaml
model/meshes/: forearm.stl
