<?xml version="1.0"?>
<package format="3">
  <name>human_arm_description</name>
  <version>0.0.1</version>
  <description>Human arm model as URDF</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <license>NO REDISTRIBUTION ACCEPTED</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publishe_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
