<?xml version="1.0"?>
<package format="3">
  <name>human_arm_motion_server</name>
  <version>0.0.1</version>
  <description>Pose server move the human arn model into predefined positions</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David Leins</maintainer>
  <license>NO REDISTRIBUTION ACCEPTED</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>human_arm_motion_msgs</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
