<?xml version="1.0"?>
<package format="3">
  <name>human_arm_motion_msgs</name>
  <version>0.0.1</version>
  <description>Messages for the human arm pose server</description>

  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <license>NO REDISTRIBUTION ACCEPTED</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
