<package>
  <name>human_arm_rviz_plugin</name>
  <version>0.1.0</version>
  <description>
     Rviz plugin to start the motion director and load configs
  </description>
  <maintainer email="dleins@techfak.de">David Leins</maintainer>
  <license>NO REDISTRIBUTION ACCEPTED</license>

  <author>David Leins</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>human_arm_motion_server</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
